<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Task List"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btnUserFormTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/task_1_user_form"/>

            <Button
                android:id="@+id/btnColorScreenTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_2_color_screen"/>

            <Button
                android:id="@+id/btnResetButtonTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_3_counter_task"/>

            <Button
                android:id="@+id/btnActivityToFragmentTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_4_activity_to_fragment"/>

            <Button
                android:id="@+id/btnPhoneCallsTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_5_phone_calls_data"/>

            <Button
                android:id="@+id/btnFragmentToFragmentTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Task 6 Fragment To Fragment"/>

            <Button
                android:id="@+id/btnFirebaseTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Task 7 Firebase Connection"/>

            <Button
                android:id="@+id/btnRoomdbTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Task 8 Room Database Connection"/>

            <Button
                android:id="@+id/btnWeatherTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Task 9 Weather App Task"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Task 10"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>